classfile: Update for Java 16
RecordAttribute is promoted from preview to stable. PermittedSubclasses
is previewed for a 2nd time.

We also recompile the test classes with javac 16.

Signed-off-by: BJ Hargrave <bj@hargrave.dev>